slider plugin added + fixed spacing issues
- added the new slider plugin js file
- and call it in first-pilot.html (but not used in first-pilot.js in this update)
- spacing issues fixed; can now modify them in the css with row_gap and column_gap
- borders change to same width, grey for regular and green for highlighted (for now, may change)

--- a/pilot/experiment-files/image-array-multi-choice.css
+++ b/pilot/experiment-files/image-array-multi-choice.css
@@ -1,7 +1,10 @@
 #iamc-grid-top {
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto 1fr;
+    column-gap: 5px;
+    row-gap: 5px;
+    margin-bottom: 50px;
 }
 
 #iamc-grid-image-0 {
@@ -24,15 +27,21 @@
     grid-row: 2 / 3;
 }
 
+.iamc-grid-image-div {
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+}
+
 .iamc-grid-image {
     height: 200px;
     width: 200px;
 
-    border: 1px solid black;
+    border: 3px solid grey;
 }
 
 #iamc-grid-image-highlighted {
-    border: 5px solid green;
+    border: 3px solid green;
 }
 
 #iamc-rhs {
